--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,14 +1,32 @@
-<article class="example" id="uk">
-  <header class="header">
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit"></button>
-    </form>
-  </header>
-  <div class="gallery"></div>
-</article>
+<header class="header">
+  <form class="search-form" id="search-form">
+    <input
+      type="text"
+      name="searchQuery"
+      autocomplete="off"
+      placeholder="Search images..."
+    />
+    <button type="submit">Search</button>
+  </form>
+</header>
+<div class="gallery"></div>
+<button id="scrollTop" class="upward" onclick="goUp()">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    style="transform: rotate(270deg)"
+    width="36"
+    height="36"
+    viewBox="0 0 24 24"
+    fill="#a5068d"
+  >
+    <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
+  </svg>
+</button>
+<script>
+  function goUp() {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth',
+    });
+  }
+</script>
