--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,80 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+.header {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: aqua;
+  background: linear-gradient(to right, #b8c1c4, #a5068d);
+  font-size: 20px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+.photo-card {
+  margin: 5px;
+  width: 400px;
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  border-radius: 5px;
+  width: calc(100% / 4 - 15px);
+  border-radius: 8px;
+  border: 2px solid grey;
+}
+.photo-card img {
+  width: 100%;
+  transition: transform 400ms ease-out;
+}
+.photo-card img:hover {
+  transform: scale(1.05);
+}
+.hidden {
+  display: none;
+}
+.info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+.info-item {
+  width: min-content;
+  text-align: center;
+  padding: 5px;
+}
+img {
+  display: block;
+  width: 100%;
+  height: 230px;
+}
+body {
+  background-color: azure;
+}
+button {
+  border-radius: 4px;
+  background-color: greenyellow;
+}
+.upward {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: 1;
+  border-radius: 50%;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.upward.active {
+  visibility: visible;
+  opacity: 1;
+  transition: 0.3s all;
+  bottom: 40px;
 }
