--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -22,7 +22,7 @@
     <path d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z" />
   </svg>
 </button>
-<script>
+<script defer>
   function goUp() {
     window.scrollTo({
       top: 0,
